# DeshGujaratWithVuforia

CrossPlatform/: AppController.cpp  AppController.h  MathUtils.cpp  MathUtils.h  Models.h
android/: build.gradle  settings.gradle  settings_aar.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  GLESRenderer.cpp  GLESRenderer.h  GLESUtils.cpp  GLESUtils.h  Shaders.h  VuforiaWrapper.cpp
android/app/src/main/kotlin/in/bugle/deshgujarat/: MainActivity.kt  Texture.kt  VuforiaActivity.kt
android/app/src/main/res/values/: styles.xml
android/app/src/main/res/values-v27/: styles.xml
lib/screens/: home_screen.dart
